# LearnGhostEscape

./: .gitignore  CMakeLists.txt  CMakePresets.json  LearnGhostEscape-Darwin  README.md  main.cpp
src/: enemy.cpp  enemy.h  main.cpp  move_control_arrow.cpp  move_control_arrow.h  move_control_wasd.cpp  move_control_wasd.h  player.cpp  player.h  scene_main.cpp  scene_main.h  scene_title.cpp  scene_title.h  spawner.cpp  spawner.h  weapon_thunder.cpp  weapon_thunder.h
src/affiliate/: affiliate_bar.cpp  affiliate_bar.h  collider.cpp  collider.h  sprite.cpp  sprite.h  sprite_anim.cpp  sprite_anim.h  text_label.cpp  text_label.h
src/core/: actor.cpp  actor.h  asset_store.cpp  asset_store.h  data_struct.h  defs.h  game.cpp  game.h  object.cpp  object.h  object_affiliate.cpp  object_affiliate.h  object_screen.cpp  object_screen.h  object_world.cpp  object_world.h  scene.cpp  scene.h
src/raw/: bg_star.cpp  bg_star.h  move_control.cpp  move_control.h  spell_creator.h  stats.cpp  stats.h  thunder_spell_creator.cpp  thunder_spell_creator.h  timer.cpp  timer.h  weapon.cpp  weapon.h
src/screen/: hud_button.cpp  hud_button.h  hud_skill.cpp  hud_skill.h  hud_stats.cpp  hud_stats.h  hud_text.cpp  hud_text.h  ui_mouse.cpp  ui_mouse.h
src/state/: button_state.h  button_state_hover.cpp  button_state_hover.h  button_state_normal.cpp  button_state_normal.h  button_state_press.cpp  button_state_press.h
src/world/: effect.cpp  effect.h  spell.cpp  spell.h
